adding test for a linear reg model in the description vectorized using countvectorize

--- a/arruda.ipynb
+++ b/arruda.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -303,7 +303,7 @@
        "4           0.20797  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>4840</td>\n",
-       "      <td>4504</td>\n",
+       "      <td>4840</td>\n",
        "      <td>4302</td>\n",
        "      <td>4840</td>\n",
        "      <td>4840</td>\n",
@@ -436,7 +436,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>27036</td>\n",
-       "      <td>24880</td>\n",
+       "      <td>27036</td>\n",
        "      <td>26186</td>\n",
        "      <td>27036</td>\n",
        "      <td>27036</td>\n",
@@ -456,7 +456,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>3108</td>\n",
-       "      <td>3015</td>\n",
+       "      <td>3108</td>\n",
        "      <td>2984</td>\n",
        "      <td>3108</td>\n",
        "      <td>3108</td>\n",
@@ -476,7 +476,7 @@
        "      <td>31507</td>\n",
        "      <td>0</td>\n",
        "      <td>33705</td>\n",
-       "      <td>31313</td>\n",
+       "      <td>33705</td>\n",
        "      <td>32810</td>\n",
        "      <td>33705</td>\n",
        "      <td>33705</td>\n",
@@ -501,10 +501,10 @@
        "                      param_1  param_2  param_3  title  description  price  \\\n",
        "category_name                                                                \n",
        "Автомобили              62055    62055    61937  62494        62494  61287   \n",
-       "Аквариум                    0        0        0   4840         4504   4302   \n",
-       "Аудио и видео           26857        0        0  27036        24880  26186   \n",
-       "Билеты и путешествия     3047        0        0   3108         3015   2984   \n",
-       "Бытовая техника         33528    31507        0  33705        31313  32810   \n",
+       "Аквариум                    0        0        0   4840         4840   4302   \n",
+       "Аудио и видео           26857        0        0  27036        27036  26186   \n",
+       "Билеты и путешествия     3047        0        0   3108         3108   2984   \n",
+       "Бытовая техника         33528    31507        0  33705        33705  32810   \n",
        "\n",
        "                      item_seq_number  activation_date  user_type  image  \\\n",
        "category_name                                                              \n",
@@ -523,7 +523,7 @@
        "Бытовая техника             31852             33705  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -558,11 +558,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f3af88ab6d8>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f931a501588>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -593,11 +593,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /home/arruda/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "nltk.download('stopwords')\n",
     "\n",
     "\n",
     "def convert_deal_probability_to_class(value):\n",
@@ -614,7 +627,7 @@
     "df['deal_prob_class'] = df['deal_probability'].apply(convert_deal_probability_to_class)\n",
     "\n",
     "def prepare_vectorizer_and_col(df, col_name):\n",
-    "    vectorizer = CountVectorizer(lowercase=True)\n",
+    "    vectorizer = CountVectorizer(lowercase=True, stop_words=stopwords.words('russian'))\n",
     "    corpus = df[col_name]\n",
     "    col_vectorized = vectorizer.fit_transform(corpus)\n",
     "    return col_vectorized, vectorizer\n",
@@ -626,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,16 +661,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## testando modelo BayesianRidge"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import BayesianRidge, LinearRegression\n",
+    "clf = BayesianRidge()\n",
+    "\n",
+    "# clf.(description_vectorized, df['deal_probability'])\n",
+    "linear_regression = LinearRegression()\n",
+    "linear_regression.fit(description_vectorized, df['deal_probability'])\n",
+    "# clf.predict()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "def save_description_linear_regression_model(pkl_filename, model):\n",
+    "    with open(pkl_filename, 'wb') as f:\n",
+    "        pickle.dump(model, f)\n",
+    "def load_description_linear_regression_model(pkl_filename):\n",
+    "    with open(pkl_filename, 'rb') as f:\n",
+    "        pickle_model = pickle.load(f)\n",
+    "        return pickle_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_description_linear_regression_model('description_countvec_lreg_model.pkl', linear_regression)\n",
+    "description_countvec_lreg_model = load_description_linear_regression_model('description_countvec_lreg_model.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testv = description_countvec_lreg_model.coef_ == linear_regression.coef_"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# # vectorizer.transform(['Кокон']).toarray().\n",
