--- a/arruda.ipynb
+++ b/arruda.ipynb
@@ -567,7 +567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualizando a distribuiçã das probabilidades de venda:"
+    "## Visualizando a distribuiçã das probabilidades de venda"
    ]
   },
   {
