--- a/final_avito.ipynb
+++ b/final_avito.ipynb
@@ -11,14 +11,15 @@
     "\n",
     "## Equipe:\n",
     "* Catherine dos Santos Tostes - Aluna de Mestrado PPGI\n",
-    "* Felipe Arruda Pontes -  Ouvinte de Mestrado PPGI\n",
+    "* Felipe Arruda Pontes -  Aluno Ouvinte de Mestrado PPGI\n",
     "* Jean Gabriel N. Nguema -  Aluno de Mestrado PPGI\n",
     "\n",
     "No ramo do comércio eletrônico, a venda de produtos através de anúncios classificados em sites conhece um crescimento rápido. No entanto, é comum que anunciantes, indivíduos ou empresas, se frustrem com uma demanda fraca ou inexistente por seus produtos apesar do investimento em propaganda no caso de anunciantes empresariais. Por outro lado, uma demanda alta e persistente por produtos já vendidos causa frustração do anunciante por indicar a venda por um preço a abaixo do preço do mercado. A venda efetiva dos produtos nos sites classificados depende de uma combinação de fatores, que podem fazer uma grande diferença para aumentar o interesse dos consumidores nos produtos. Exemplos desses fatores incluem descrições, imagens, regiões geográficas, etc. Por exemplo, descrições com nuances ou com poucos detalhes e imagens de pouca qualidade podem reduzir o interesse dos consumidores.\n",
     "\n",
     "A AVITO, maior site de anúncios classificados na Rússia, está acostumado com a frustração dos seus anunciantes e busca formas de reduzi-la. Com esse objetivo, ela patrocina uma competição iniciada no mês de maio de 2018 através da Kaggle. A Kaggle é uma empresa, que possui uma plataforma aberta na qual cientistas, pesquisadores e profissionais do mundo inteiro na área de ciência de dados são desafiados a resolver problemas reais e complexos de empresas por meio de competições. \n",
     "\n",
-    "A “competição Avito” da Kaggle desafia pesquisadores a predizer a probabilidade da compra de qualquer produto em função das informações fornecidas no anúncio da plataforma da AVITO. Essas informações incluem a descrição (título, detalhes, etc.), o contexto (a cidade onde o anúncio foi emitido e anúncios já postados) e o histórico da demanda para anúncios similares no contexto. O dataset que reúne informações de todos os anúncios classificados possui cerca de 7 GB. A competição já conta com mais de 1000 equipes. Com as previsões, a AVITO espera dar um retorno aos anunciantes sobre como otimizar suas carteiras de produtos, além de fornecer aos anunciantes indicadores sobre o potencial interesse dos consumidores em seus anúncios."
+    "A “competição Avito” da Kaggle desafia pesquisadores a predizer a probabilidade da compra de qualquer produto em função das informações fornecidas no anúncio da plataforma da AVITO. Essas informações incluem a descrição (título, detalhes, etc.), o contexto (a cidade onde o anúncio foi emitido e anúncios já postados) e o histórico da demanda para anúncios similares no contexto. O dataset que reúne informações de todos os anúncios classificados possui cerca de 7 GB. A competição já conta com mais de 1000 equipes. Com as previsões, a AVITO espera dar um retorno aos anunciantes sobre como otimizar suas carteiras de produtos, além de fornecer aos anunciantes indicadores sobre o potencial interesse dos consumidores em seus anúncios.\n",
+    "\n"
    ]
   },
   {
@@ -1458,13 +1459,15 @@
     "id": "IAoCKACtfzzu"
    },
    "source": [
-    "## SVR com Frequencias e Probabilidades???\n",
+    "## Regressão vs Classificação\n",
+    "**Algoritmos avaliadaos**: LinearRegression, SVR, SGDRegressor, MLPRegressor, Multinomial Naive Bayes, Gaussian Naive Bayes e MLPClassifier\n",
     "\n",
-    "\n",
+    "Foram utilizados 7 algoritmos, sendo  4 de regressão. Usou-se um cross-validation entre os algoritmos de regressão, e outro cross validation entre os de classificação. Os algoritmos de regressão apresentaram desempenho superior conforme evidenciado por gráficos (vide link). O **LinearRegression** teve o melhor desempenho e foi escolhido para a submissão. \n",
+    "**Como features**, a abordagem utilizou estatísticas de probabilidades médias  nos campos **user_type, region, category_name, region, city, preços**, probabilidades por categoria de preços  e distribuição de frequências dos campos como user_type, region. etc. Usou-se tambem o LabelEncoder para transformar as targets (deal_probability) de valores contínuos para discretos para serem aceitos por algritmos de classificação.\n",
     "\n",
     "**Score Final:** 0,2489\n",
     "\n",
-    "Disponivel em: https://github.com/arruda/avito_challenge/blob/master/Jean_SVR_NumericFeatures_V01.ipynb"
+    "Disponivel em: https://github.com/arruda/avito_challenge/blob/master/Jean_All_NFeat_V02-2489.ipynb"
    ]
   },
   {
