--- a/final_avito.ipynb
+++ b/final_avito.ipynb
@@ -202,7 +202,25 @@
     "id": "rnLyKUR7zZWn"
    },
    "source": [
-    "* Verificamos campos do dataset de treinamento (train). Podemos notar que os campos estão descritos em russo."
+    "Verificamos campos do dataset de treinamento (train). Podemos notar que os campos estão descritos em russo. Campos do dataset:\n",
+    "* item_id: Contém a String de código de cada item à venda.\n",
+    "* user_id: Contém a String de código de cada usuário.\n",
+    "* region: De qual região da Rússia faz parte.\n",
+    "* city: De qual cidade da Rússia faz parte.\n",
+    "* parent_category_name: Nome da categoria que o produto faz parte.\n",
+    "* category_name: Nome da subcategoria que o produto faz parte.\n",
+    "* param_1: Parâmetro do produto.\n",
+    "* param_2: Parâmetro do produto.\n",
+    "* param_3: Parâmetro do produto.\n",
+    "* title: Título do produto à venda.\n",
+    "* description: Descrição do produto à venda.\n",
+    "* price: Preço do produto.\n",
+    "* item_seq_number: Número de sequência do produto.\n",
+    "* activation_date: Data de divulgação do produto.\n",
+    "* user_type: Tipo de usuário (se é pessoal ou empresarial).\n",
+    "* image: Imagem.\n",
+    "* image_top_1: Tamanho da Imagem.\n",
+    "* deal_probability: Probabilidade de venda do produto."
    ]
   },
   {
